--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGO_URL=mongodb+srv://m001-student:m001-mongodb-basics@cluster0.0uf8m.mongodb.net/Cars
+MONGO_URL=mongodb+srv://m001-student:m001-mongodb-basics@cluster0.0uf8m.mongodb.net/HackathonChats
