--- a/bridge-chat-ui/package.json
+++ b/bridge-chat-ui/package.json
@@ -20,6 +20,7 @@
     "vite:build": "vite build"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.13.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@faker-js/faker": "^8.1.0",
