ref: elastic search

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
 PORT=3000
 MONGO_URL=mongodb+srv://m001-student:m001-mongodb-basics@cluster0.0uf8m.mongodb.net/HackathonChats
 JWT_SECRET=qwertyuiopasdfghjklzxcvbnm
+ELASTIC_USER=elastic
+ELASTIC_PASSWORD=2*=Sq*+6*e+8AJdKgJgV
